--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.conection.sftp</groupId>
 	<artifactId>sftp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>phonebook</name>
+	<name>sftp</name>
 	<description>Connection sftp</description>
 	<properties>
 		<java.version>11</java.version>
@@ -28,6 +28,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.55</version>
 		</dependency>
 
 		<dependency>
